--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@
 /* Responsive adjustments for specific devices */
 
 /* Small laptops */
-@media (max-width: 1200px) {
+@media (max-width: 12oopx) {
   .content {
     display: grid;
     grid-template-columns: 1fr;
@@ -568,7 +568,7 @@
 }
 
 /* Large phones */
-@media (max-width: 480px) and (min-width: 320px) {
+@media (max-width: 48opx) and (min-width: 32opx) {
   .content {
     display: grid;
     grid-template-columns: 1fr;
@@ -605,7 +605,7 @@
 }
 
 /* Small phones */
-@media (max-width: 320px) {
+@media (max-width: 32opx) {
   .content {
     display: grid;
     grid-template-columns: 1fr;
